--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
 }
 
 body {
-  background-color: #ffffff;
+background: #000000;
+background: linear-gradient(180deg, rgba(0, 0, 0, 1) 37%, rgba(33, 0, 26, 1) 84%, rgba(64, 0, 17, 1) 100%);
+
   color: #111827;
   font-family: "Work Sans", ui-sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", sans-serif;
