--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@
   color-scheme: light;
 }
 
+@property --a {
+	syntax: '<angle>';
+	initial-value: 0deg;
+	inherits: false
+}
+@keyframes a { to { --a: 1turn } }
+
 body {
   background: linear-gradient(180deg, rgba(0, 0, 0, 1) 37%, rgba(33, 0, 26, 1) 84%, rgba(64, 0, 17, 1) 100%);
   color: #111827;
@@ -10,9 +17,9 @@ body {
   -webkit-font-smoothing: antialiased;
   position: relative;
   isolation: isolate;
+	background-blend-mode: multiply;
 }
 
-/* Subtle multi-color glow framing the viewport */
 body::before {
   content: "";
   position: fixed;
@@ -21,10 +28,16 @@ body::before {
     radial-gradient(45vw 45vw at top left, rgba(255, 77, 196, 0.3), transparent 70%),
     radial-gradient(45vw 45vw at top right, rgba(86, 139, 255, 0.28), transparent 70%),
     radial-gradient(55vw 55vw at bottom center, rgba(255, 120, 74, 0.22), transparent 75%);
-  filter: blur(40px);
   opacity: 0.8;
   pointer-events: none;
   z-index: -1;
+
+  inset: -3vw;
+	border: solid 4vw;
+	border-image: 
+		conic-gradient(from var(--a), rgba(255, 77, 196, 0.3), rgba(86, 139, 255, 0.28), rgba(0, 200, 74, 0.62),  rgba(255, 77, 196, 0.3)) 1;
+	filter: blur(3vw);
+	animation: a 18s linear infinite;
 }
 
 .standout {
