--- a/styles.css
+++ b/styles.css
@@ -28,21 +28,50 @@ body::before {
     radial-gradient(45vw 45vw at top left, rgba(255, 77, 196, 0.3), transparent 70%),
     radial-gradient(45vw 45vw at top right, rgba(86, 139, 255, 0.28), transparent 70%),
     radial-gradient(55vw 55vw at bottom center, rgba(255, 120, 74, 0.22), transparent 75%);
+  background: none;
   opacity: 0.8;
   pointer-events: none;
-  z-index: -1;
+  z-index: -2;
 
   inset: -3vw;
-	border: solid 4vw;
+	border: solid 5vw;
 	border-image: 
 		conic-gradient(from var(--a),
      rgba(255,  77, 196, 0.2),
+     rgba(  0, 0,  0, 0),  
      rgba( 86, 139, 255, 0.15), 
-     rgba(  0, 200,  74, 0.4),  
+     rgba(  0, 200,  74, 0.2),  
+     rgba(  0, 0,  0, 0),  
      rgba(255,  77, 196, 0.2)) 1;
-	filter: blur(5vw);
+	filter: blur(4vw);
 	animation: a 18s linear infinite;
 }
+
+#secondlayer {
+  background: none;
+	background-blend-mode: multiply;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+}
+
+#secondlayer::before {
+  content: "";
+  position: fixed;
+  z-index: -1;
+
+  inset: -3vw;
+	border: solid 6vw;
+	border-image: 
+		conic-gradient(from var(--a),
+     rgba(0,  255, 255, .2 ),
+     rgba(255,  255, 0, .2 ),
+     rgba(0,  0, 0, 0 ),
+     rgba(0,255, 255, .2)) 1;
+	filter: blur(10vw);
+	animation: a 13s linear infinite;
+}
+
 
 .standout {
   background: -webkit-linear-gradient(#eee, #333);
